fixed text link align on portfolio page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,13 +108,27 @@ img {
 	left: -200px;
 	top: 85px;
 	text-align: center;
-	padding: 10px;
-	width: 230px;
+	padding: 10px 50px 10px 10px;
+	width: 190px;
+	margin-left: 205px;
+	background: #4aaaa5;
+	z-index: 2;
+}
+#link1 {
+	position: relative;
+	left: -200px;
+	top: 85px;
+	text-align: center;
+	padding: 10px 35px 10px 10px;
+	width: 205px;
 	margin-left: 205px;
 	background: #4aaaa5;
 	z-index: 2;
 }
 .link1 > a {
+	color: white;
+}
+#link1 > a {
 	color: white;
 }
 .pict2 {
